    - Added reusable rocket parts which are unlocked in lanthanide science. When launched in a rocket, they bring back down 'reusable rocket parts' which can be unpacked to get a return on your items.

  Changes:
    - Updated the two steel items graphics and their technology icons.
    - Moved noble gas producitvity research to be behind lanthanides.
    - Updated sodium carbonate/bicarbonate icons, and gave them variations.
    - Moved vinyl bromide PMMA to be behind alkali science.

  Fixes:
    - Fixed bismuth chunk leeching icon being old.

---------------------------------------------------------------------------------------------------
Version: 0.8.008
Date: 2026-01-10
  The i was ill :( Update:

  Changes:
    - Made polonium sassxolotl enrichment 5s faster (20s > 15s).
    - Made CO be able to be put inside a burn-inator.

  Fixes:
    - Fixed all fluorine typos in the locales.
    - Fixed a bunch of recipes producing stuff unintentionally when prodded.
    - Fixed the dinitrogen tetroxide typo.
    - Fixed palladium processing not being a prerequisite of advanced circuits.
    - Fixed germanium processing not bieng a preqrequisite of metalloids.
    - Fixed molten inconel not outputting a flux container.

---------------------------------------------------------------------------------------------------
Version: 0.8.007
Date: 2026-01-03
  The oh boy! bug reports being fixed! Update:

  Changes:
    - Made francium slightly cheaper.

  Fixes:
    - Fixed molten uhrlumin not outputting a flux container.
    - Fixed prodded nitric oxide outputting platinum.
    - Fixed prodded FUCK recipes outputting ampules.
    - Fixed prodded astatine MOT empting outputting MOT's.
    - Made astatine kova (polonium + francium) recipes actually worth it.
    - Updated mixed ore slag leeching icon.
    - Fixed RP-1 not outputting Ni-W catalysts.

---------------------------------------------------------------------------------------------------
Version: 0.8.006